--- a/src/assets/styles/views/Homepage.scss
+++ b/src/assets/styles/views/Homepage.scss
@@ -1,14 +1,11 @@
 .homepage {
   @include flex(space-between, false, column);
   background: $c-grey-000;
-  padding: 0rem 4rem 5rem 4rem;
+  margin: 4rem 2rem 0rem 2rem;
+  padding: 2rem;
   max-width: 100vw;
-  height: 90vh;
   overflow: hidden;
-}
-
-.homepage ~ :deep(.footer) {
-  margin-top: 0;
+  border: $br-lg;
 }
 
 .title {
@@ -16,10 +13,70 @@
   margin-top: 20rem;
 }
 
-.homepage-footer-button-section {
-  @include flex(flex-end, false, row);
+.add-more {
+  width: 100%;
+  margin-bottom: 2rem;
+  @include flex(space-between, center, row);
+  .search-name-input {
+    height: 2.5rem;
+  }
 }
 
-.redirect-button {
+.airport-header {
+  @include flex(space-between);
+  padding-bottom: 1rem;
+  border-bottom: 1px solid $c-grey-200;
+  margin-bottom: 1rem;
+  @include font(p4, $c-primary-500);
+}
+
+.airport-cell {
+  &.--name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 20%;
+    padding-right: 0.3rem;
+    @include font(p4);
+  }
+
+  &.--type {
+    width: 20%;
+  }
+
+  &.--country {
+    width: 15%;
+    @include font(p4);
+  }
+
+  &.--region {
+    width: 10%;
+    @include font(p4);
+  }
+  &.--gps {
+    width: 15%;
+    @include font(p4);
+  }
+  &.--other {
+    width: 20%;
+    @include font(p4);
+  }
+}
+
+.airport-row {
+  @include flex(false, center, row);
+  width: 100%;
+  @include font(p4);
+  margin-bottom: 1rem;
+}
+
+.edit-icon {
   margin-right: 1rem;
+  cursor: pointer;
+}
+.remove-icon {
+  cursor: pointer;
+}
+.pagination-section {
+  margin-top: 1rem;
 }
